create carousel, adding images, h3s and information

--- a/index.html
+++ b/index.html
@@ -23,6 +23,41 @@
     <!-- HEADER -->
     <header>
         <div class="container">
+<!-- Carousel Practice -->
+            <div class="row row-content">
+                <div class="col-md-8 mx-auto">
+                    <div id="homeCarousel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/breadcrumb-trail.jpg" alt="Breadcrumb Train Campground" class="d-block w-100">
+                                <div class="carousel-caption">
+                                    <h3>Breadcrump Trail Campground</h3>
+                                    <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/react-lake.jpg" alt="React Lake Campground" class="d-block w-100">
+                                <div class="carousel-caption">
+                                    <h3>React Lake Campground</h3>
+                                    <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/chrome-river.jpg" alt="Chrome River Campground" class="d-block w-100">
+                                <div class="carousel-caption">
+                                    <h3>Chrome River Camground</h3>
+                                    <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-growth firs at this enchanting spot by the Chrome River.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
             <div class="row">
                 <div class="col-4 col-sm-3 col-md-2 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
