--- a/index.html
+++ b/index.html
@@ -23,32 +23,50 @@
     <!-- HEADER -->
     <header>
         <div class="container">
-<!-- Carousel Practice -->
+
+
+            <!-- Carousel Practice -->
             <div class="row row-content">
                 <div class="col-md-8 mx-auto">
                     <div id="homeCarousel" class="carousel slide" data-bs-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-bs-target="#homeCarousel" data-bs-slide-to="0" class="active"></li>
+                            <li data-bs-target="#homeCarousel" data-bs-slide-to="1"></li>
+                            <li data-bs-target="#homeCarousel" data-bs-slide-to="2"></li>
+                        </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="img/breadcrumb-trail.jpg" alt="Breadcrumb Train Campground" class="d-block w-100">
+                                <img src="img/breadcrumb-trail.jpg" alt="Breadcrumb Train Campground"
+                                    class="d-block w-100">
                                 <div class="carousel-caption">
                                     <h3>Breadcrump Trail Campground</h3>
-                                    <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground.</p>
+                                    <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path,
+                                        hike-in-only campground.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/react-lake.jpg" alt="React Lake Campground" class="d-block w-100">
                                 <div class="carousel-caption">
                                     <h3>React Lake Campground</h3>
-                                    <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers</p>
+                                    <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this
+                                        campground on the shores of the pristine React Lake is a favorite for fly
+                                        fishers</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/chrome-river.jpg" alt="Chrome River Campground" class="d-block w-100">
                                 <div class="carousel-caption">
                                     <h3>Chrome River Camground</h3>
-                                    <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-growth firs at this enchanting spot by the Chrome River.</p>
+                                    <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a
+                                        canopy of old-growth firs at this enchanting spot by the Chrome River.</p>
                                 </div>
                             </div>
+                            <a href="#homeCarousel" class="carousel-control-prev" role="button" data-bs-slide="prev"></a>
+                            <span class="carousel-control-prev-icon"></span>
+                            <span class="sr-only">Previous</span>
+                            <a href="#homeCarousel" class="carousel-control-next" role="button" data-bs-slide="next"></a>
+                            <span class="carousel-control-next-icon"></span>
+                            <span class="sr-only">Next</span>
                         </div>
                     </div>
                 </div>
@@ -167,7 +185,8 @@
                 </div>
                 <div class="modal-body">
                     <div class="container-fluid">
-                        <form action="https://us-central1-nucamp-production.cloudfunctions.net/post/formdata" method="post">
+                        <form action="https://us-central1-nucamp-production.cloudfunctions.net/post/formdata"
+                            method="post">
                             <div class="row">
                                 <div class="col-7">
                                     <label for="numCampers">Number of Campers</label>
@@ -186,10 +205,11 @@
                             </div>
                             <div class="row">
                                 <div class="col-7">
-                                <label for="date">Date</label>
+                                    <label for="date">Date</label>
                                 </div>
                                 <div class="col">
-                                    <input name="date" class="form-control" id="date" type="date" for="date" placeholder="Date">
+                                    <input name="date" class="form-control" id="date" type="date" for="date"
+                                        placeholder="Date">
                                 </div>
                             </div>
                             <div class="row mb-3">
